--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   },
   "homepage": "https://github.com/johsw/johanneswehner.com#readme",
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "sass": "^1.23.1"
+  },
+  "dependencies": {
+    "particles.js": "^2.0.0",
+    "particlesjs": "^2.2.3"
   }
 }
